--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "terminator-cli",
   "version": "1.0.0",
   "description": "Securely remove files like a terminator!",
-  "main": "index.js",
+  "main": "./src/index.js",
+  "bin": {
+    "terminator": "./bin/terminator.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,5 +29,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.1"
+  },
+  "dependencies": {
+    "commander": "^6.1.0"
   }
 }
