--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
   "rules": {
     "prettier/prettier": ["error"],
     "no-console": "off",
-    "no-useless-return": "off",
-    "node/shebang": "off"
+    "node/shebang": "off",
+    "consistent-return": "off"
   }
 }
