--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
-    "commander": "^6.1.0"
+    "commander": "^6.1.0",
+    "fs-extra": "^9.0.1"
   }
 }
