--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^6.1.0",
+    "figlet": "^1.5.0",
     "fs-extra": "^9.0.1",
-    "is-absolute": "^1.0.0"
+    "inquirer": "^7.3.3",
+    "is-absolute": "^1.0.0",
+    "progress": "^2.0.3"
   }
 }
